# catapult

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/: architecture.md  deployment.md  qa-analysis.md
migrations/: 001_initial_schema.sql  002_job_context.sql  003_pr_comments.sql
nixos/: catapult.nix  podman.nix
src/: config.rs  lib.rs  main.rs
src/central/: deploy_config.rs  dispatch.rs  mod.rs  server.rs  worker_monitor.rs
src/central/db/: mod.rs  models.rs  queries.rs
src/central/github/: api.rs  app.rs  mod.rs  webhook.rs
src/central/handlers/: admin.rs  heartbeat.rs  mod.rs  status.rs  webhook.rs
src/shared/: auth.rs  mod.rs  types.rs
src/worker/: callback.rs  mod.rs  server.rs
src/worker/builder/: clone.rs  mod.rs  network.rs  podman.rs  types.rs
src/worker/deploy/: caddy.rs  cloudflare.rs  mod.rs  sites.rs
src/worker/handlers/: build.rs  cleanup.rs  mod.rs
tests/: central_api.rs  central_db.rs  container_integration.rs  worker_build.rs
tests/common/: mod.rs
