[package]
name = "catapult"
version = "0.1.0"
edition = "2024"
description = "Automated deployment runner for GitHub webhooks"
license = "AGPL-3.0-only"
repository = "https://github.com/nullisLabs/catapult"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database (Central only, but included for single binary)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"

# Container management (Worker only)
bollard = "0.17"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
futures = "0.3"
bytes = "1"
derive_more = { version = "1", features = ["display", "from", "error", "deref", "as_ref"] }

[dev-dependencies]
testcontainers = "0.21"
testcontainers-modules = { version = "0.10", features = ["postgres"] }
tempfile = "3"
wiremock = "0.6"
